[FIX] print layout issue by removing flex

--- a/app/css/main.scss
+++ b/app/css/main.scss
@@ -35,14 +35,6 @@ body {
 
     margin: auto;
     overflow: auto;
-
-    @supports (display: flex) {
-        align-items: center;
-        display: flex;
-        justify-content: center;
-        height: 100vh;
-        min-height: $main-view-height;
-    }
 }
 
 #app {
